--- a/index.html
+++ b/index.html
@@ -3,66 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My GitHub Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    h1 {
-      margin-bottom: 0;
-      font-size: 2.8rem;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #666;
-    }
-    nav a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #0366d6;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Home - Your Name</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <h1>Your Name</h1>
-    <p>Welcome to my portfolio website!</p>
+  <header class="sticky-header">
     <nav>
-      <a href="#projects">Projects</a> |
-      <a href="#about">About Me</a> |
-      <a href="#contact">Contact</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="work.html">Work</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><a href="#">Project One</a> - A short description.</li>
-      <li><a href="#">Project Two</a> - A short description.</li>
-      <li><a href="#">Project Three</a> - A short description.</li>
-    </ul>
-  </section>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>This is where you write a short bio about yourself.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
-  </section>
+  <main>
+    <h1>Welcome to my portfolio</h1>
+    <p>This is the home page.</p>
+  </main>
 </body>
 </html>
