Site Style changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home - Your Name</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="sticky-header">
@@ -17,8 +17,23 @@
   </header>
 
   <main>
-    <h1>Welcome to my portfolio</h1>
-    <p>This is the home page.</p>
+    <section class="hero">
+      <h1>Welcome to My Portfolio</h1>
+      <p>Explore my work and projects.</p>
+    </section>
+
+    <section class="projects">
+      <article class="project">
+        <img src="project1.jpg" alt="Project 1">
+        <h2>Project Title</h2>
+        <p>Short description of the project.</p>
+      </article>
+      <!-- Repeat for other projects -->
+    </section>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Your Name | All Rights Reserved</p>
+  </footer>
 </body>
 </html>
